--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,18 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "My Journey to Financial Independent"
+theme = "er"
+
+[outputs]
+home = ["HTML", "Atom"]
+
+[mediaTypes]
+[mediaTypes."application/atom"]
+suffixes = ["xml"]
+
+[outputFormats.Atom]
+mediaType = "application/atom"
+baseName = "feed"
+isPlainText = false
+
+disableKinds = ['RSS']
