--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://paekabu.netlify.com"
 languageCode = "en-us"
 title = "My Journey to Financial Independent"
 theme = "er"
